Fix spacings and paddings

--- a/css/ckeditor_widgets.css
+++ b/css/ckeditor_widgets.css
@@ -107,9 +107,9 @@
 .two-col-right .col-md-9{
 	margin: 0;
 }
-.three-col .col-md-4{
-	padding-left: 0;
-	padding-right: 0;
+.three-col .col-2{
+	padding-left: 7.5px;
+	padding-right: 7.5px;
 }
 
 .accordion {
